--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
     <script>
         const azureConfig = {
             auth: {
-                clientId: 'YOUR_CLIENT_ID',
+                clientId: '4947e42d-fd2e-4cb7-93d3-f9da54d3b951',
                 authority: 'https://Cuorg18.b2clogin.com/Cuorg18.onmicrosoft.com/B2C_1_signin_signup/oauth2/v2.0/authorize',
-                redirectUri: 'http://localhost:3000', // Replace with your redirect URI
+                redirectUri: 'https://green-grass-030ff3910.5.azurestaticapps.net/', // Replace with your redirect URI
             }
         };
 
