--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <h1>Welcome to Our Application</h1>
         <p>Please sign in or sign up to continue</p>
         <div class="button-container">
-            <button onclick="signIn()">Sign In</button>
+            <button onclick="signIn()"><a href="https://Cuorg18.b2clogin.com/Cuorg18.onmicrosoft.com/oauth2/v2.0/authorize?p=B2C_1_signin_signup&client_id=4947e42d-fd2e-4cb7-93d3-f9da54d3b951&nonce=defaultNonce&redirect_uri=https%3A%2F%2Fgreen-grass-030ff3910.5.azurestaticapps.net%2F&scope=openid&response_type=code&prompt=login">Sign In</a></button>
             <button onclick="signUp()">Sign Up</button>
         </div>
     </div>
