--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,13 @@
 
     </main>
 
+    <!-- Footer -->
+    <footer style="background-color: #f8f9fa; padding: 20px 0;">
+        <div style="text-align: center;">
+            <p style="margin: 0; font-size: 14px; color: #495057;">&copy; 2024 Developed by Chandigarh University Students</p>
+        </div>
+    </footer>
+
     <!-- scripts -->
     <script src="assets/scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.6/dist/autoComplete.min.js"></script>
